--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <img src="img/logo-mobile.svg" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
         <button class="page-header__toggle" type="button"></button>
-        <nav class="main-nav">
-          <ul class="main-nav__site-menu site-menu">
+        <nav class="page-header__nav main-nav">
+          <ul class="page-header__site-menu page-header__site-menu--closed site-menu">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
@@ -87,23 +87,23 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__user-menu user-menu">
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Поиск по сайту
-                <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
-                  <use xlink:href="#icon-search"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста
-                <svg class="user-menu__link--icon user-menu__link--icon-cart" width="21" height="19">
-                  <use xlink:href="#icon-cart"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
         </nav>
+        <ul class="page-header__user-menu page-header__user-menu--closed main-nav__user-menu user-menu">
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link user-menu__link-text-hidden">Поиск по сайту
+              <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
+                <use xlink:href="#icon-search"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста
+              <svg class="user-menu__link--icon user-menu__link--icon-cart" width="21" height="19">
+                <use xlink:href="#icon-cart"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
 
       </div>
     </header>
@@ -285,6 +285,6 @@
         </div>
       </div>
     </footer>
-
+    <script src="js/script.js"></script>
   </body>
 </html>
