--- a/catalog.html
+++ b/catalog.html
@@ -84,16 +84,16 @@
         <nav class="page-header__nav main-nav">
           <ul class="page-header__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
-              <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
+              <a href="catalog.html" class="main-nav__link site-menu__link site-menu__link--catalog">Каталог товаров</a>
             </li>
             <li class="main-nav__item site-menu__item">
-              <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
+              <a href="form.html" class="main-nav__link site-menu__link site-menu__link--order">Вязание на заказ</a>
             </li>
           </ul>
         </nav>
-        <ul class="page-header__user-menu main-nav__user-menu user-menu">
-          <li class="main-nav__item user-menu__item">
-            <a href="" class="main-nav__link user-menu__link user-menu__link-text-hidden">Поиск по сайту
+        <ul class="page-header__user-menu user-menu">
+          <li class="main-nav__item user-menu__item user-menu__link-search">
+            <a href="" class="main-nav__link user-menu__link user-menu__link--text-hidden">Поиск по сайту
               <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
                 <use xlink:href="#icon-search"></use>
               </svg>
@@ -107,133 +107,144 @@
             </a>
           </li>
         </ul>
+        <ul class="page-header__product-stock product-stock">
+          <li class="product-stock__item">
+            <a class="product-stock__link" href="#">Новые поступления</a>
+          </li>
+          <li class="product-stock__item">
+            <a class="product-stock__link" href="#">Распродажа</a>
+          </li>
+        </ul>
+        <b class="page-header__delivery">Бесплатная доставка по России</b>
 
       </div>
     </header>
-        <main class="page-main">
+    <main class="page-main">
       <section class="page-title page-title--catalog">
         <div class="container page-title__container--catalog">
           <h1 class="page-title__text">Каталог товаров</h1>
         </div>
       </section>
 
-        <section class="main-catalog">
-          <div class="container">
+      <section class="main-catalog">
+        <div class="container">
           <ul class="main-catalog__list product-preview">
             <li class="product-preview__item">
 
               <img src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="" class="product-preview__img">
-                <div class="product-preview__wrapper">
-              <div class="product-preview__info">
-              <h3 class="subtitle product-preview__title">Зайчик-попрыгайчик</h3>
-              <b class="product-preview__value">Рост 30 см, вес 200 г</b>
-              </div>
-              <div class="product-preview__buy">
-                <b class="product-preview__price">1 200 руб.</b>
-                <a href="" class="product-preview__add-to-basket">
-                  <svg class="product-preview__add-to-basket--icon-cart" width="21" height="19">
-                    <use xlink:href="#icon-cart"></use>
-                  </svg>
-                </a>
-              </div>
-
-            </li>
-            <li class="product-preview__item">
-              <img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья" class="product-preview__img">
               <div class="product-preview__wrapper">
-              <div class="product-preview__info">
-              <h3 class="subtitle product-preview__title">Корзинка для белья</h3>
-              <b class="product-preview__value">Диаметр 15 см, высота 10 см</b>
-              </div>
-              <div class="product-preview__buy">
-                <b class="product-preview__price">690 руб.</b>
-                <a href="" class="product-preview__add-to-basket">
-                  <svg class="product-preview__add-to-basket--icon-cart" width="21" height="19">
-                    <use xlink:href="#icon-cart"></use>
-                  </svg>
-                </a>
-              </div>
-              </div>
-            </li>
-            <li class="product-preview__item">
-              <img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
-                <div class="product-preview__wrapper">
-              <div class="product-preview__info">
-              <h3 class="subtitle product-preview__title">Большая корзинка для игрушек</h3>
-              <b class="product-preview__value">Диаметр 30 см, высота 30 см</b>
-              </div>
-              <div class="product-preview__buy">
-                <b class="product-preview__price">1 500 руб.</b>
-                <a href="" class="product-preview__add-to-basket">
-                  <svg class="product-preview__add-to-basket--icon-cart" width="21" height="19">
-                    <use xlink:href="#icon-cart"></use>
-                  </svg>
-                </a>
-              </div>
-              </div>
-            </li>
-          </ul>
-</div>
-        </section>
-      <section class="production">
-        <div class="container">
+                <div class="product-preview__info">
+                  <h3 class="subtitle product-preview__title">Зайчик-попрыгайчик</h3>
+                  <b class="product-preview__value">Рост 30 см, вес 200 г</b>
+                </div>
+                <div class="product-preview__buy">
+                  <b class="product-preview__price">1 200 руб.</b>
+                  <a href="" class="product-preview__add-to-basket">
+                    <svg class="product-preview__add-to-basket--icon-cart" width="21" height="19">
+                      <use xlink:href="#icon-cart"></use>
+                    </svg>
+                  </a>
+                </div>
 
-          <h2 class="subtitle production__title">Процесс производства
-            <svg class="production__title-icon" width="32" height="32">
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video"  width="32" height="32"></use>
-                </svg></h2>
-              <div class="production__video">
-                <img src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства" class="production__video-img">
-              </div>
-          <div class="production__descripion">
-            <p class="text production__descripion-text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-            <a href="" class="button production__descripion-order">Сделать заказ</a>
+              </li>
+              <li class="product-preview__item">
+                <img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья" class="product-preview__img">
+                <div class="product-preview__wrapper">
+                  <div class="product-preview__info">
+                    <h3 class="subtitle product-preview__title">Корзинка для белья</h3>
+                    <b class="product-preview__value">Диаметр 15 см, высота 10 см</b>
+                  </div>
+                  <div class="product-preview__buy">
+                    <b class="product-preview__price">690 руб.</b>
+                    <a href="" class="product-preview__add-to-basket">
+                      <svg class="product-preview__add-to-basket--icon-cart" width="21" height="19">
+                        <use xlink:href="#icon-cart"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="product-preview__item">
+                <img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
+                <div class="product-preview__wrapper">
+                  <div class="product-preview__info">
+                    <h3 class="subtitle product-preview__title">Большая корзинка для игрушек</h3>
+                    <b class="product-preview__value">Диаметр 30 см, высота 30 см</b>
+                  </div>
+                  <div class="product-preview__buy">
+                    <b class="product-preview__price">1 500 руб.</b>
+                    <a href="" class="product-preview__add-to-basket">
+                      <svg class="product-preview__add-to-basket--icon-cart" width="21" height="19">
+                        <use xlink:href="#icon-cart"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="production">
+          <div class="container">
+            <div class="production__title">
+              <h2 class="subtitle production__title--text">Процесс производства
+                <svg class="production__title-icon" width="32" height="32">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video" width="32" height="32"></use>
+                </svg>
+              </h2>
+            </div>
+            <div class="production__video">
+              <img src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства" class="production__video-img">
+            </div>
+            <div class="production__descripion">
+              <p class="text production__descripion--text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+              <a href="" class="button production__descripion-order">Сделать заказ</a>
+            </div>
+
           </div>
 
-        </div>
+        </section>
 
-      </section>
-
-    </main>
-    <footer class="page-footer">
-      <div class="container">
-        <a href="#" class="page-footer__logo">
-          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
-        </a>
-        <ul class="page-footer__social social__list">
-          <li class="social__item">
-            <a href="#" class="social__link social__link--inst">
-              <svg class="social__item--icon" width="22" height="21">
-                <use xlink:href="#icon-insta"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="#" class="social__link social__link--fb">
-              <svg class="social__item--icon" width="15" height="28">
-                <use xlink:href="#icon-fb"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="#" class="social__link social__link--tw">
-              <svg class="social__item--icon" width="23" height="20">
-                <use xlink:href="#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-
-        <div class="page-footer__coopyright coopyright">
-          <a href="#" class="coopyright__link">
-            <span class="coopyright__text">Разработано</span>
-            <svg class="copyright__link--icon" width="27" height="37">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy" x="0" y="3" width="26.943" height="34.09"></use>
-            </svg>
+      </main>
+      <footer class="page-footer">
+        <div class="container">
+          <a href="#" class="page-footer__logo">
+            <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
           </a>
+          <ul class="page-footer__social social__list">
+            <li class="social__item">
+              <a href="#" class="social__link social__link--inst">
+                <svg class="social__item--icon" width="22" height="21">
+                  <use xlink:href="#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link social__link--fb">
+                <svg class="social__item--icon" width="15" height="28">
+                  <use xlink:href="#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link social__link--tw">
+                <svg class="social__item--icon" width="23" height="20">
+                  <use xlink:href="#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+          <div class="page-footer__coopyright coopyright">
+            <a href="#" class="coopyright__link">
+              <span class="coopyright__text">Разработано</span>
+              <svg class="copyright__link--icon" width="27" height="37">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy" x="0" y="3" width="26.943" height="34.09"></use>
+              </svg>
+            </a>
+          </div>
         </div>
-      </div>
-    </footer>
-<script src="js/script.js"></script>
-  </body>
-</html>
+      </footer>
+      <script src="js/script.js"></script>
+    </body>
+  </html>
