--- a/form.html
+++ b/form.html
@@ -81,16 +81,16 @@
         <nav class="page-header__nav main-nav">
           <ul class="page-header__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
-              <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
+              <a href="catalog.html" class="main-nav__link site-menu__link site-menu__link--catalog">Каталог товаров</a>
             </li>
             <li class="main-nav__item site-menu__item">
-              <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
+              <a href="form.html" class="main-nav__link site-menu__link site-menu__link--order">Вязание на заказ</a>
             </li>
           </ul>
         </nav>
-        <ul class="page-header__user-menu main-nav__user-menu user-menu">
-          <li class="main-nav__item user-menu__item">
-            <a href="" class="main-nav__link user-menu__link user-menu__link-text-hidden">Поиск по сайту
+        <ul class="page-header__user-menu user-menu">
+          <li class="main-nav__item user-menu__item user-menu__link-search">
+            <a href="" class="main-nav__link user-menu__link user-menu__link--text-hidden">Поиск по сайту
               <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
                 <use xlink:href="#icon-search"></use>
               </svg>
@@ -104,13 +104,22 @@
             </a>
           </li>
         </ul>
+        <ul class="page-header__product-stock product-stock">
+          <li class="product-stock__item">
+            <a class="product-stock__link" href="#">Новые поступления</a>
+          </li>
+          <li class="product-stock__item">
+            <a class="product-stock__link" href="#">Распродажа</a>
+          </li>
+        </ul>
+        <b class="page-header__delivery">Бесплатная доставка по России</b>
 
       </div>
     </header>
     <main class="page-main">
-      <section class="page-title page-title__container--form">
-        <div class="container">
-          <h1 class="page-title__text page-title__container--form">Вязание на заказ</h1>
+      <section class="page-title page-title--form">
+        <div class="container page-title__container--form">
+          <h1 class="page-title__text">Вязание на заказ</h1>
         </div>
       </section>
       <form class="form-order" action="https://echo.htmlacademy.ru" method="get">
@@ -186,28 +195,32 @@
 
           <div class="form-order__section form-order__section-grey form-order__section--double">
 
-                <div class="form-order__options--wrapper">
-                                <h2 class="form-order__section-title form-order__section-title--info">ТЕЛ</h2>
-            <div class="form-order__options">
-              <input class="form-order__input-text" type="text" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
+            <div class="form-order__options--wrapper">
+              <h2 class="form-order__section-title form-order__section-title--info">ТЕЛ</h2>
+              <div class="form-order__section--item">
+                <input class="form-order__input-text" type="text" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
+              </div>
+            </div>
+            <div class="form-order__options--wrapper">
+              <h2 class="form-order__section-title form-order__section-title--info">E-&nbsp;mail</h2>
+              <div class="form-order__section--item">
+                <input class="form-order__input-text" type="text" name="email" value="" placeholder="Ваш Email*">
+              </div>
             </div>
           </div>
-          <div class="form-order__options--wrapper">
-            <h2 class="form-order__section-title form-order__section-title--info">E-&nbsp;mail</h2>
-            <div class="form-order__options">
-              <input class="form-order__input-text" type="text" name="email" value="" placeholder="Ваш Email*">
-            </div>
-          </div>
-        </div>
 
           <div class="form-order__section">
             <h2 class="form-order__section-title form-order__section-title--info">доп</h2>
             <div class="form-order__options">
-            <textarea class="form-order__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <div class="form-order__options--wrapper">
+                <textarea class="form-order__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              </div>
+            </div>
           </div>
+          <div class="form-order__footer">
+            <p class="form-order__description form-order__description-required">*Поля обязательны для заполнения</p>
+            <button class="button form-order__submit" type="submit">Отправить заказ</button>
           </div>
-          <p class="form-order__description form-order__description-required">*Поля обязательны для заполнения</p>
-          <button class="button form-order__submit" type="submit">Отправить заказ</button>
         </div>
       </form>
 
